# interrogate

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmake/: README.md
cmake/macros/: AddBisonTarget.cmake  PackageConfig.cmake  Python.cmake
cmake/scripts/: CompareCommand.cmake  ConcatenateToCXX.cmake  MergeIncludes.cmake
parser-inc/: concepts  string_view
src/: CMakeLists.txt  CompilerFlags.cmake  Config.cmake  LocalSetup.cmake
src/cppparser/: CMakeLists.txt  cppArrayType.cxx  cppArrayType.h  cppAttributeList.h  cppBison.cxx.prebuilt  cppBison.h.prebuilt  cppBison.yxx  cppBisonDefs.h  cppClassTemplateParameter.h  cppClosureType.h  cppCommentBlock.h  cppConcept.cxx  cppConcept.h  cppConstType.cxx  cppConstType.h  cppDeclaration.cxx  cppDeclaration.h  cppEnumType.cxx  cppEnumType.h  cppExpression.cxx  cppExpression.h  cppExpressionParser.h  cppExtensionType.h  cppFile.h  cppFunctionGroup.h  cppFunctionType.h  cppGlobals.h  cppIdentifier.h  cppInstance.cxx  cppInstance.h  cppInstanceIdentifier.cxx  cppInstanceIdentifier.h  cppMakeProperty.h  cppMakeSeq.h  cppManifest.cxx  cppManifest.h  cppNameComponent.h  cppNamespace.cxx  cppNamespace.h  cppParameterList.cxx  (+26 more)
src/dtoolbase/: CMakeLists.txt  dtoolbase.cxx  dtoolbase.h  dtoolbase_cc.h  dtoolsymbols.h  pdtoa.cxx
src/dtoolutil/: CMakeLists.txt  dSearchPath.cxx  dSearchPath.h  filename.I  filename.cxx  filename.h  filename_assist.h  filename_assist.mm  globPattern.h  load_dso.cxx  panda_getopt_impl.cxx  string_utils.cxx  string_utils.h  textEncoder.I  textEncoder.cxx  textEncoder.h  unicodeLatinMap.h  vector_string.cxx  vector_string.h  vector_uchar.cxx  vector_uchar.h  win32ArgParser.cxx  win32ArgParser.h
src/interrogate/: CMakeLists.txt  functionRemap.cxx  functionRemap.h  interfaceMaker.cxx  interfaceMakerPythonNative.cxx  interfaceMakerPythonNative.h  interfaceMakerPythonSimple.cxx  interfaceMakerPythonSimple.h  interrogate.cxx  interrogate.h  interrogateBuilder.cxx  interrogate_module.cxx  parse_file.cxx  pnotify.h  typeManager.cxx  typeManager.h
src/interrogatedb/: CMakeLists.txt  config_interrogatedb.cxx  config_interrogatedb.h  interrogateComponent.cxx  interrogateComponent.h  interrogateDatabase.cxx  interrogateDatabase.h  interrogateElement.cxx  interrogateElement.h  interrogateFunction.I  interrogateFunction.cxx  interrogateFunction.h  interrogateFunctionWrapper.cxx  interrogateFunctionWrapper.h  interrogateMakeSeq.cxx  interrogateMakeSeq.h  interrogateManifest.cxx  interrogateManifest.h  interrogateType.cxx  interrogateType.h  interrogate_datafile.cxx  interrogate_datafile.h  py_compat.h  py_panda.I  py_panda.cxx  py_panda.h  py_support.I  py_support.cxx  py_support.h  py_wrappers.cxx  py_wrappers.h
tests/: CMakeLists.txt
tests/cppparser/: CMakeLists.txt  concepts.h  conditional.c  literals.c  namespace_alias.cxx  recursive_macros.c  stat.c  variable_template.h
tests/interrogatedb/: CMakeLists.txt  item_assignment.h  item_assignment.in  item_assignment.txt  nested_struct.h  nested_struct.in  nested_struct.txt  static_class_member.h  static_class_member.txt
